--- a/main.html
+++ b/main.html
@@ -17,13 +17,13 @@
 			<li><a href="#">Contact us</a></li>
 		</ul>
 	</nav>
-	<h1>first audio</h1>
+	<h1>3 random audios</h1>
     <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls>
     </audio>
-	<h1>second audio</h1>
+	<!--<h1>second audio</h1>-->
 	<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>
 	</audio>
-	<h1>third audio</h1>
+	<!--<h1>third audio</h1>-->
 	<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls>
 	</audio>
 
